Edit index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -31,5 +31,28 @@
             </div>
         </div>
     </div>
+    <div class="section2">
+        <div class="info-header">
+            Some random information.
+        </div>
+        <div class="info-container">
+            <div class="info">
+                <div class="info-box"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="info-box"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="info-box"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="info-box"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
