--- a/index.html
+++ b/index.html
@@ -64,5 +64,18 @@
             </div>
         </div>
     </div>
+    <div class="section4">
+        <div class="action-container">
+            <div class="action-group">
+                <div class="action-header">
+                    Call to action! It's time!
+                </div>
+                <div class="action-text">
+                    Sign up for our product by clicking that button right over there!
+                </div>
+            </div>
+            <button class="button action-button">Sign up</button>
+        </div>
+    </div>
 </body>
 </html>
