--- a/index.html
+++ b/index.html
@@ -77,5 +77,8 @@
             <button class="button action-button">Sign up</button>
         </div>
     </div>
+    <div class="footer">
+        Copyright © The Odin Project 2021
+    </div>
 </body>
 </html>
